Switch to lsp-installer

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -404,6 +404,7 @@ map cmd+shift+h neighboring_window left
 map cmd+shift+j neighboring_window down
 map cmd+shift+k neighboring_window up
 map cmd+shift+l neighboring_window right
+map cmd+shift+r layout_action rotate
 
 # move panes
 map alt+shift+h move_window left
