--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -208,7 +208,7 @@ background #282a36
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-# selection_background #fffacd
+# selection_background #55596d
 
 #: The background for text selected with the mouse.
 
@@ -239,8 +239,8 @@ color12 #c4acf5
 
 #: blue
 
-color5  #f199ce
-color13 #bf9eee
+color5  #bf9eee
+color13 #f199ce
 
 #: magenta
 
