--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #italic_font      Menlo Italic
 #bold_italic_font Menlo Bold Italic
 
-font_family      JetBrains Mono Regular
+font_family      JetBrains Mono
 # bold_font        JetBrains Mono Medium
 # italic_font      JetBrains Mono Italic
 # bold_italic_font JetBrains Mono Medium Italic
@@ -48,7 +48,9 @@ disable_ligatures cursor
 #: Cursor customization {{{
 
 # cursor #ffffe0
-cursor #e1f5fe
+# cursor #e1f5fe
+cursor none
+shell_integration no-cursor
 
 #: Default cursor color
 
