--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -71,6 +71,7 @@ set -g @dracula-show-time false
 set -g @dracula-show-location false
 set -g @dracula-show-left-icon session
 set -g @dracula-border-contrast true
-
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
 
