--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -58,7 +58,7 @@ bind C-r source-file ~/.tmux.conf
 bind C-f resize-pane -Z
 
 # C-x for closing with no confirmation
-bind-key C-d kill-pane
+bind C-d kill-pane
 
 
 # plugins
