--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -60,6 +60,8 @@ bind C-f resize-pane -Z
 # C-x for closing with no confirmation
 bind C-d kill-pane
 
+bind -n C-Enter send-keys Escape "[13;5u"
+
 
 # plugins
 set -g @plugin 'kwkarlwang/tmux-dracula'  
