--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,17 +8,17 @@
 #bold_italic_font Menlo Bold Italic
 
 font_family      JetBrains Mono
-# bold_font        JetBrains Mono Medium
-# italic_font      JetBrains Mono Italic
-# bold_italic_font JetBrains Mono Medium Italic
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 font_size 10.0
 
 #: Font size (in pts)
 
 ## TODO: Fira code only 
-#adjust_line_height  -6
-#adjust_baseline 5
+# adjust_line_height  -6
+# adjust_baseline 5
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -78,7 +78,7 @@ scrollback_lines 10000
 #: ones.
 
  #scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
-scrollback_pager /usr/local/bin/nvim -u NONE -c "set nowrap nolist showtabline=0 foldcolumn=0 laststatus=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+scrollback_pager /opt/homebrew/bin/nvim -u NONE -c "set nowrap nolist showtabline=0 foldcolumn=0 laststatus=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 
 
 #scrollback_pager nvimpager
