--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -50,6 +50,7 @@ bind C-c new-window -c "#{pane_current_path}"
 # enxt and previous window
 bind C-n next
 bind C-p prev
+bind Space last-window
 
 # source file (reload)
 bind C-r source-file ~/.tmux.conf
