Add windows swapping

--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -47,10 +47,14 @@ bind C-v split-window -h -c "#{pane_current_path}"
 
 # create window
 bind C-c new-window -c "#{pane_current_path}"
-# enxt and previous window
+# next and previous window
 bind C-n next
 bind C-p prev
 bind Space last-window
+
+# swap with next and previous window
+bind -r C-[ swap-window -t -1\; select-window -t -1
+bind -r C-] swap-window -t +1\; select-window -t +1
 
 # source file (reload)
 bind C-r source-file ~/.tmux.conf
