--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -53,8 +53,8 @@ bind C-p prev
 bind Space last-window
 
 # swap with next and previous window
-bind -r C-[ swap-window -t -1\; select-window -t -1
-bind -r C-] swap-window -t +1\; select-window -t +1
+bind -r [ swap-window -t -1\; select-window -t -1
+bind -r ] swap-window -t +1\; select-window -t +1
 
 # source file (reload)
 bind C-r source-file ~/.tmux.conf
