--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -391,7 +391,7 @@ macos_quit_when_last_window_closed no
 
 #: Scrolling {{{
 
-map ctrl+space         show_scrollback
+map ctrl+shift+space         show_scrollback
 
 #: }}}
 
