--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -445,6 +445,7 @@ map cmd+f next_layout
 # make vim recognize shift enter and ctrl enter
 map shift+enter send_text all \x1b[13;2u
 map ctrl+enter send_text all \x1b[13;5u
+map ctrl+; send_text all \x1b[59;5u
 # remove word
 map alt+backspace send_text all \x17
 # remove line
