--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -66,6 +66,7 @@ bind C-f resize-pane -Z
 bind C-d kill-pane
 
 bind -n C-Enter send-keys Escape "[13;5u"
+bind -n C-\; send-keys Escape "[59;5u"
 
 
 # plugins
