--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -26,9 +26,9 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 unbind -T copy-mode-vi Enter   #this is the default binding for copy (but not to system clipboard)
 
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'pbcopy'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pbcopy'
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'pbcopy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'pbcopy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe 'pbcopy'
 
 # resize-pane
 bind -r h resize-pane -L 5
