--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -431,6 +431,8 @@ map cmd+] move_tab_forward
 map cmd+[ move_tab_backward
 map cmd+, set_tab_title
 map cmd+n new_os_window_with_cwd
+map cmd+x detach_tab
+map cmd+shift+x detach_tab ask
 
 #: }}}
 
