--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -383,6 +383,8 @@ macos_quit_when_last_window_closed no
 #: default, kitty will stay running, even with no open windows, as is
 #: the expected behavior on macOS.
 
+confirm_os_window_close 0
+
 #: }}}
 
 #: Keyboard shortcuts {{{
