--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -105,7 +105,7 @@ rshift + lshift - f : yabai -m window --toggle zoom-parent
 lctrl - 5 : yabai -m window --toggle zoom-parent
 
 ## toggle floating
-rshift - t : yabai -m window --toggle float
+# rshift - t : yabai -m window --toggle float
 lctrl - 4 : yabai -m window --toggle float
 
 ## toggle split
@@ -114,3 +114,6 @@ rshift - v : yabai -m window --toggle split
 ## toggle sticky
 lctrl - 6 : yabai -m window --toggle sticky; \
             yabai -m window --toggle topmost
+
+## toggle border
+rshift - t : yabai -m window --toggle border
