--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -31,6 +31,7 @@ yabai -m rule --add app="^Preview$" manage=off
 # yabai -m rule --add app="^WeChat$" manage=off
 yabai -m rule --add app="^KeyCastr$" manage=off
 yabai -m rule --add app="^FaceTime$" manage=off
+yabai -m rule --add app="^VLC$" border=off
 
 
 ## global settings
