--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -20,6 +20,7 @@ bind-key t set-option status
 
 # copy to system clipboard
 set-window-option -g mode-keys vi
+set -g allow-passthrough on
 unbind -T copy-mode-vi 'v'
 unbind -T copy-mode-vi 'y'
 unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -82,4 +83,3 @@ set -g @dracula-border-contrast true
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
-
