--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -11,6 +11,7 @@ bind-key C-a send-prefix
 set -g base-index 1
 set-option -g renumber-windows on
 set-option -g focus-events on
+set-option -g history-limit 50000
 
 # status style
 #set -g status-style 'bg=#3E2029 fg=#f8f8f2'
