--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -50,7 +50,7 @@ disable_ligatures cursor
 # cursor #ffffe0
 # cursor #e1f5fe
 cursor none
-shell_integration no-cursor
+shell_integration no-cursor no-cwd
 
 #: Default cursor color
 
