--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -400,8 +400,8 @@ map ctrl+shift+space         show_scrollback
 #: Window management {{{
 
 # split panes
-map cmd+enter launch --location=vsplit --cwd=current
-map cmd+shift+enter launch --location=hsplit --cwd=current
+map cmd+enter launch --location=vsplit --cwd=oldest
+map cmd+shift+enter launch --location=hsplit --cwd=oldest
 
 # navigate panes
 map cmd+shift+h neighboring_window left
@@ -428,7 +428,7 @@ map cmd+d close_window
 
 #: Tab management {{{
 
-map cmd+t new_tab_with_cwd
+map cmd+t launch --type=tab --cwd=oldest
 map cmd+] move_tab_forward
 map cmd+[ move_tab_backward
 map cmd+, set_tab_title
