--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -422,8 +422,6 @@ map cmd+alt+l resize_window wider 5
 map cmd+alt+k resize_window taller 2
 map cmd+alt+j resize_window shorter 2
 
-# close window
-map cmd+d close_window
 #: }}}
 
 #: Tab management {{{
@@ -435,6 +433,14 @@ map cmd+, set_tab_title
 map cmd+n new_os_window_with_cwd
 map cmd+x detach_tab
 map cmd+shift+x detach_tab ask
+
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+shift+space goto_tab -1
 
 #: }}}
 
