--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -441,6 +441,7 @@ map cmd+4 goto_tab 4
 map cmd+5 goto_tab 5
 map cmd+6 goto_tab 6
 map cmd+ctrl+space goto_tab -1
+map cmd+s goto_tab -1
 
 #: }}}
 
