--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -422,6 +422,9 @@ map cmd+alt+l resize_window wider 5
 map cmd+alt+k resize_window taller 2
 map cmd+alt+j resize_window shorter 2
 
+# close window
+map cmd+d close_window
+
 #: }}}
 
 #: Tab management {{{
