--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -195,6 +195,8 @@ hide_window_decorations yes
 
 # tab_bar_background none
 
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index} {title}"
+
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
