--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -133,6 +133,7 @@ mouse_hide_wait 10.0
 
 
 enable_audio_bell no
+window_alert_on_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
