--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -21,6 +21,7 @@ bind-key t set-option status
 
 # copy to system clipboard
 set-window-option -g mode-keys vi
+set -s set-clipboard on
 set -g allow-passthrough on
 unbind -T copy-mode-vi 'v'
 unbind -T copy-mode-vi 'y'
