--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -20,7 +20,7 @@ yabai -m rule --add app="^Karabiner-EventViewer$" sticky=on layer=above manage=o
 yabai -m rule --add app="^Alfred Preferences$" sticky=on layer=above manage=off
 yabai -m rule --add app="^Disk Utility$" sticky=on layer=above manage=off
 yabai -m rule --add app="^System Information$" sticky=on layer=above manage=off
-yabai -m rule --add app="^Activity Monitor$" sticky=on layer=above manage=off
+# yabai -m rule --add app="^Activity Monitor$" sticky=on layer=above manage=off
 yabai -m rule --add app="^FortiClient$" sticky=on layer=above manage=off
 yabai -m rule --add app="^Font Book$" sticky=on layer=above manage=off
 yabai -m rule --add app="^Digital Colou?r Meter$" sticky=on
