--- a/btop/.config/btop/btop.conf
+++ b/btop/.config/btop/btop.conf
@@ -25,7 +25,7 @@ presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:defaul
 vim_keys = True
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
-rounded_corners = True
+rounded_corners = False
 
 #* Default symbols to use for graph creation, "braille", "block" or "tty".
 #* "braille" offers the highest resolution but might not be included in all fonts.
@@ -66,7 +66,7 @@ proc_tree = False
 proc_colors = True
 
 #* Use a darkening gradient in the process list.
-proc_gradient = True
+proc_gradient = False
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
 proc_per_core = False
