--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -47,7 +47,9 @@ yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.95
 
 yabai -m config window_border                on
-yabai -m config window_border_width          6
+yabai -m config window_border_width          2
+yabai -m config window_border_radius         0
+yabai -m config window_border_blur           off
 
 # yabai -m config active_window_border_color   0xff6272a4
 yabai -m config active_window_border_color   0xffa3c4ef
@@ -61,8 +63,6 @@ yabai -m config mouse_modifier               shift
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 yabai -m config mouse_drop_action            swap
-
-yabai -m config window_shadow float
 
 ## general space settings
 yabai -m config layout                       bsp
