--- a/.luarc.json
+++ b/.luarc.json
@@ -3,5 +3,8 @@
     "Lua.completion.autoRequire": false,
     "Lua.diagnostics.disable": [
         "deprecated"
+    ],
+    "Lua.diagnostics.globals": [
+        "vim"
     ]
 }
