--- a/.luarc.json
+++ b/.luarc.json
@@ -2,7 +2,8 @@
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "Lua.completion.autoRequire": false,
     "Lua.diagnostics.disable": [
-        "deprecated"
+        "deprecated",
+        "duplicate-set-field"
     ],
     "Lua.diagnostics.globals": [
         "vim"
