--- a/.luarc.json
+++ b/.luarc.json
@@ -1,92 +1,84 @@
 {
-    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-    "Lua.completion.autoRequire": false,
-    "Lua.diagnostics.disable": [
-        "deprecated",
-        "duplicate-set-field"
-    ],
-    "Lua.diagnostics.globals": [
-        "vim"
-    ],
     "workspace.library": [
-        "/Users/kwkarlwang/.local/share/nvim/lazy/neodev.nvim/types/stable",
-        "/usr/local/Cellar/neovim/0.9.1/share/nvim/runtime/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-ts-autotag/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-git/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/mason.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-vtsls/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/neogen/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-nvim-lsp-signature-help/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/lightspeed.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/bufjump.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-nvim-lsp-document-symbol/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-ts-rainbow/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-surround/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/bufresize.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-dap/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-nvim-insert-text-lsp/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/glow.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-dap-ui/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp_luasnip/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-toggleterm.lua/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/plenary.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-autopairs/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-FeMaco.lua/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/noice.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/winshift.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-treesitter/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nui.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/vim-matchup/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-notify/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-web-devicons/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-under-comparator/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/lazy.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/diffview.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-osc52/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/telescope.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-colorizer.lua/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-lspconfig/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-jdtls/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-comment-frame/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/Comment.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-cmp/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-path/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-spectre/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/LuaSnip/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-ufo/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-nvim-lsp/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/neodev.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/rust-tools.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/bufdelete.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-cmdline/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/haskell-tools.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-metals/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/mini.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-buffer/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/code_runner.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-bqf/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/popup.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/promise-async/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/dressing.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/auto-session/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/telescope-fzf-native.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/iswap.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-ts-context-commentstring/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-calc/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/highlight-current-n.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-dap-python/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/gitsigns.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-nvim-lua/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/neogit/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/cmp-emoji/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/null-ls.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/feline.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/nvim-treesitter-textobjects/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/editorconfig.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/mason-lspconfig.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/indent-blankline.nvim/lua",
-        "/Users/kwkarlwang/.local/share/nvim/lazy/numb.nvim/lua",
-        "/Users/kwkarlwang/dotfiles/vim/.config/nvim/lua",
-        "${3rd}/luv/library"
+        "/Users/karl.wang/.local/share/nvim/lazy/neodev.nvim/types/stable",
+        "/opt/homebrew/Cellar/neovim/0.9.1/share/nvim/runtime/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/indent-blankline.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-dap-ui/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-FeMaco.lua/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-dap-python/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/lightspeed.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/rust-tools.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/popup.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/winshift.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/telescope-fzf-native.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/vim-matchup/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-treesitter-textobjects/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/null-ls.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-web-devicons/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-ts-rainbow/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-osc52/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-lspconfig/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/iswap.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-surround/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-spectre/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/mason.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/gitsigns.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/editorconfig.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/mini.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/plenary.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-ts-context-commentstring/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/dressing.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-toggleterm.lua/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/bufdelete.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/lazy.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-comment-frame/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-ts-autotag/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/auto-session/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-treesitter/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/neodev.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/noice.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-autopairs/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-cmp/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-under-comparator/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-vtsls/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/highlight-current-n.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nui.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-nvim-lsp/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-metals/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/feline.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-notify/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-cmdline/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/code_runner.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-bqf/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-ufo/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/numb.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-path/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/promise-async/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-jdtls/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/telescope.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/neogen/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-calc/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/LuaSnip/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/Comment.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/bufjump.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-nvim-insert-text-lsp/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-git/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-nvim-lua/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-buffer/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/bufresize.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-emoji/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/mason-lspconfig.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/neogit/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/diffview.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-nvim-lsp-document-symbol/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/glow.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/haskell-tools.nvim/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-dap/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp-nvim-lsp-signature-help/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/nvim-colorizer.lua/lua",
+        "/Users/karl.wang/.local/share/nvim/lazy/cmp_luasnip/lua",
+        "/Users/karl.wang/dotfiles/vim/.config/nvim/lua",
+        "${3rd}/luv/library",
+        "${3rd}/luassert/library"
     ]
 }
