--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -27,7 +27,7 @@ yabai -m rule --add app="^Digital Colou?r Meter$" sticky=on
 # yabai -m rule --add app="^Spotify$" manage=off
 yabai -m rule --add app="^console$" manage=off
 yabai -m rule --add app="^Logi Options$" manage=off layer=above
-yabai -m rule --add app="^Preview$" manage=off
+# yabai -m rule --add app="^Preview$" manage=off
 # yabai -m rule --add app="^WeChat$" manage=off
 yabai -m rule --add app="^KeyCastr$" manage=off
 yabai -m rule --add app="^FaceTime$" manage=off
