--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -12,6 +12,7 @@ set -g base-index 1
 set-option -g renumber-windows on
 set-option -g focus-events on
 set-option -g history-limit 50000
+set-option -g default-shell $SHELL
 
 # status style
 #set -g status-style 'bg=#3E2029 fg=#f8f8f2'
