--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -66,7 +66,7 @@ cursor_blink_interval 0
 
 #: Scrollback {{{
 
-scrollback_lines 100000
+scrollback_pager_history_size 4000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
