--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -50,7 +50,8 @@ disable_ligatures cursor
 # cursor #ffffe0
 # cursor #e1f5fe
 cursor none
-shell_integration no-cursor no-cwd
+# shell_integration no-cursor no-cwd
+shell_integration no-cwd
 
 #: Default cursor color
 
@@ -80,7 +81,7 @@ scrollback_pager_history_size 4000
  #scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -u NONE -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=0 clipboard+=unnamedplus' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"' "
 # scrollback_pager nvim -u NONE -c "set shell=bash laststatus=0 scrollback=100000 showtabline=0 foldcolumn=0 termguicolors ignorecase" -c "autocmd TermOpen * stopinsert" -c "autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000"
-scrollback_pager nvim -u NONE -R -M -c 'lua require("extensions/kitty")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
+# scrollback_pager nvim -u NONE -R -M -c 'lua require("extensions/kitty")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
 
 #scrollback_pager nvimpager
@@ -305,7 +306,7 @@ allow_remote_control yes
 #: from controlling kitty. Changing this option by reloading the
 #: config will only affect newly created windows.
 
-# listen_on none
+listen_on unix:/tmp/kitty
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
@@ -473,3 +474,10 @@ map super+backspace send_text all \x15
 map super+left send_text all \x01
 # move to end
 map super+right send_text all \x05
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+# Browse scrollback buffer in nvim
+map kitty_mod+space kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
