--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -69,9 +69,14 @@ bind C-f resize-pane -Z
 # C-x for closing with no confirmation
 bind C-d kill-pane
 
+# enable C-Enter and C-; in nvim
 bind -n C-Enter send-keys Escape "[13;5u"
 bind -n C-\; send-keys Escape "[59;5u"
 
+
+# Browse tmux pane in nvim
+bind [ run-shell 'kitty @ kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --env "TMUX=$TMUX" --env "TMUX_PANE=#{pane_id}" --nvim-args "+let g:auto_session_enabled = v:false"'
+# bind g run-shell 'kitty @ kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --env "TMUX=$TMUX" --env "TMUX_PANE=#{pane_id}" --nvim-args "+let g:auto_session_enabled = v:false" --config get_last_non_empty_output '
 
 # plugins
 set -g @plugin 'kwkarlwang/tmux-dracula'  
