--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -476,7 +476,7 @@ map super+left send_text all \x01
 map super+right send_text all \x05
 
 # kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args "+let g:auto_session_enabled = v:false"
+action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args -u ~/.config/nvim/kitty-init.lua
 # Browse scrollback buffer in nvim
 map kitty_mod+space kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
