--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -481,3 +481,5 @@ action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollb
 map kitty_mod+space kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
 map kitty_mod+g kitty_scrollback_nvim --config get_last_non_empty_output
+# clear terminal and scrollback
+map super+k clear_terminal scrollback active
