--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -24,6 +24,8 @@ bind-key t set-option status
 set-window-option -g mode-keys vi
 set -s set-clipboard on
 set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 unbind -T copy-mode-vi 'v'
 unbind -T copy-mode-vi 'y'
 unbind -T copy-mode-vi MouseDragEnd1Pane
